--- a/dimensionbox/config/account-dev.yml
+++ b/dimensionbox/config/account-dev.yml
@@ -16,3 +16,13 @@ mybatis-plus:
   mapper-locations: classpath:/mybatis/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: com.iask.entity
+  global-config:
+    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+    id-type: 0
+    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+    field-strategy: 1
+    key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
+  configuration:
+    #配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId） 
+    map-underscore-to-camel-case: true
+    cache-enabled: false
