--- a/dimensionbox/config/image-dev.yml
+++ b/dimensionbox/config/image-dev.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: image
+   datasource:
+    url: jdbc:mysql://localhost:3306/dimensionbox?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 eureka:
   instance:
     prefer-ip-address: true
@@ -16,3 +21,37 @@ fdfs:
     width: 60
     height: 60
   tracker-list[0]: 192.168.29.200:22122 # tracker地址
+ 
+ailibaba:
+  durid:
+    url: jdbc:mysql://localhost:3306/dimensionbox?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    username: root
+    password: root
+    maxActive: 20
+    maxWait: 10000
+    minIdle: 3
+    validationQuery: SELECT 'x'
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    borrowConnectionTimeout: 30000
+    
+mybatis-plus:
+  # 如果是放在src/main/java目录下 classpath:/com/yourpackage/*/mapper/*Mapper.xml
+  # 如果是放在resource目录 classpath:/mapper/*Mapper.xml
+  mapper-locations: classpath:/mybatis/mapper/*Mapper.xml
+  #实体扫描，多个package用逗号或者分号分隔
+  typeAliasesPackage: com.iask.entity
+  global-config:
+    #表字段下划线转实体类大写
+    column-underline: true
+    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+    id-type: 0
+    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+    field-strategy: 1
+    key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
+  configuration:
+    #控制台打印sql语句
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId） 
+    map-underscore-to-camel-case: true
+    cache-enabled: false
