--- a/dimensionbox/config/gateway-dev.yml
+++ b/dimensionbox/config/gateway-dev.yml
@@ -9,4 +9,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 zuul:
   routes:
-    client: /p/**
+    account: /account/**
+    img: /img/**
