--- a/dimensionbox/config/gateway-dev.yml
+++ b/dimensionbox/config/gateway-dev.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: gateway
+  datasource:
+    url: jdbc:mysql://localhost:3306/dimensionbox?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 eureka:
   client:
     service-url:
