--- a/dimensionbox/config/account-dev.yml
+++ b/dimensionbox/config/account-dev.yml
@@ -14,6 +14,13 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+fdfs:
+  so-timeout: 1501
+  connect-timeout: 601
+  thumb-image:
+    width: 60
+    height: 60
+  tracker-list[0]: 192.168.29.200:22122 # tracker地址
     
 ailibaba:
   durid:
